@startuml UML de dominio

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

class Usuario {
  - id: String
  - username: String
  - email: String
  - passwordHash: String
  - estadoVerificacion: String
  - disponibilidadHoraria: String
  - regionPrincipal: Region
  - perfiles: List<PerfilJuego>
  - notificaciones: List<Notificacion>
  + registrarse(): void
  + actualizarPerfil(username: String, email: String, disponibilidadHoraria: String, regionPrincipal: Region): void
  + agregarPerfilJuego(perfil: PerfilJuego): void
  + reemplazarPerfilJuego(perfilActual: PerfilJuego, perfilNuevo: PerfilJuego): void
  + postularse(scrim: Scrim, rolDeseado: String): Postulacion
  + confirmarParticipacion(scrim: Scrim): Confirmacion
  + reportarConducta(usuarioReportado: Usuario, scrim: Scrim, motivo: String): ReporteConducta
  + recibirNotificacion(notificacion: Notificacion): void
  + perfilPara(juego: Juego): PerfilJuego
}

class PerfilJuego {
  - id: String
  - juego: Juego
  - rango: String
  - mmr: int
  - rolesPreferidos: List<String>
  + actualizarRango(nuevoRango: String): void
  + actualizarMMR(nuevoMMR: int): void
}

class Juego {
  - id: String
  - nombre: String
  - descripcion: String
  + validarFormato(modalidad: String): boolean
}

class Region {
  - id: String
  - nombre: String
  - servidor: String
  + validarLatencia(latencia: int): boolean
}

class Scrim {
  - id: String
  - juego: Juego
  - region: Region
  - fechaHora: LocalDateTime
  - duracionMinutos: int
  - mmrMinimo: int
  - mmrMaximo: int
  - latenciaMaxima: int
  - modalidad: String
  - estadoActual: String
  - cantidadJugadores: int
  - cantidadEquipos: int
  - jugadoresPorEquipo: int
  - formato: String
  - equipos: List<Equipo>
  - postulaciones: List<Postulacion>
  - confirmaciones: List<Confirmacion>
  - notificaciones: List<Notificacion>
  - estadisticas: List<Estadistica>
  - feedback: List<ComentarioFeedback>
  - reportes: List<ReporteConducta>
  + abrirPostulaciones(): void
  + cerrarPostulaciones(): void
  + iniciar(): void
  + finalizar(): void
  + cancelar(): void
  + cambiarEstado(nuevoEstado: String): void
  + recibirPostulacion(postulacion: Postulacion): void
  + agregarConfirmacion(confirmacion: Confirmacion): void
  + agregarEstadistica(estadistica: Estadistica): void
  + agregarFeedback(comentario: ComentarioFeedback): void
  + agregarReporte(reporte: ReporteConducta): void
  + agregarNotificacion(notificacion: Notificacion): void
  + reiniciarEquipos(): void
  + yaTieneParticipacion(usuario: Usuario): boolean
  + yaSePostulo(usuario: Usuario): boolean
  + usuarioYaConfirmo(usuario: Usuario): boolean
  + tieneCupoCompleto(): boolean
}

class Equipo {
  - id: String
  - lado: String
  - participaciones: List<Participacion>
  + agregarJugador(usuario: Usuario, rol: String): Participacion
  + quitarJugador(participacion: Participacion): void
  + asignarCapitan(participacion: Participacion): void
  + contieneUsuario(usuario: Usuario): boolean
  + limpiarParticipaciones(): void
  + cantidadJugadores(): int
}

class Participacion {
  - id: String
  - usuario: Usuario
  - rol: String
  - esCapitan: boolean
  - esSuplente: boolean
  - estado: String
  - fechaIngreso: LocalDateTime
  + cambiarRol(nuevoRol: String): void
  + abandonar(): void
  + asignarCapitan(): void
}

class Postulacion {
  - id: String
  - usuario: Usuario
  - scrim: Scrim
  - rolDeseado: String
  - estado: String
  - fechaPostulacion: LocalDateTime
  + aceptar(): void
  + rechazar(): void
  + confirmarAsistencia(): Confirmacion
}

class Confirmacion {
  - id: String
  - usuario: Usuario
  - scrim: Scrim
  - confirmado: boolean
  - fechaConfirmacion: LocalDateTime
  + confirmar(): void
  + revocar(): void
  + estaConfirmado(): boolean
}

class Notificacion {
  - id: String
  - tipo: String
  - canal: String
  - payload: String
  - estado: String
  - fechaEnvio: LocalDateTime
  + enviar(): void
  + reintentar(): void
}

class Estadistica {
  - id: String
  - usuario: Usuario
  - scrim: Scrim
  - kills: int
  - deaths: int
  - assists: int
  - mvp: boolean
  - observaciones: String
  - resultado: String
  + calcularKDA(): double
}

class ComentarioFeedback {
  - id: String
  - usuario: Usuario
  - scrim: Scrim
  - comentario: String
  - rating: int
  - estadoModeracion: String
  - fechaCreacion: LocalDateTime
  + aprobar(): void
  + rechazar(): void
}

class ReporteConducta {
  - id: String
  - scrim: Scrim
  - reportante: Usuario
  - reportado: Usuario
  - motivo: String
  - estado: String
  - sancion: String
  - fechaCreacion: LocalDateTime
  + procesar(): void
  + resolver(sancion: String): void
  + obtenerReportante(): Usuario
  + obtenerReportado(): Usuario
}

Usuario "1" *-- "0..*" PerfilJuego : posee perfiles
Juego "1" <-- "0..*" PerfilJuego : define perfil
Region "1" <-- "0..*" Usuario : region principal
Usuario "1" *-- "0..*" Notificacion : recibe

Juego "1" <-- "0..*" Scrim : pertenece a juego
Region "1" <-- "0..*" Scrim : se juega en region
Scrim "1" *-- "2..*" Equipo : contiene
Scrim "1" o-- "0..*" Postulacion : recibe
Scrim "1" o-- "0..*" Confirmacion : requiere
Scrim "1" o-- "0..*" Notificacion : registra
Scrim "1" o-- "0..*" Estadistica : produce
Scrim "1" o-- "0..*" ComentarioFeedback : recibe feedback
Scrim "1" o-- "0..*" ReporteConducta : genera reportes

Equipo "1" *-- "0..*" Participacion : registra integrantes
Usuario "1" <-- "0..*" Participacion : participa
Usuario "1" <-- "0..*" Postulacion : realiza
Usuario "1" <-- "0..*" Confirmacion : confirma
Usuario "1" <-- "0..*" Estadistica : posee
Usuario "1" <-- "0..*" ComentarioFeedback : escribe
Usuario "1" <-- "0..*" ReporteConducta : reportante
Usuario "1" <-- "0..*" ReporteConducta : reportado

@enduml
